# ChatBot-backend

./: .gitignore  app.py  chat.py  fakebot.py  pyproject.toml  requirements.txt  speech_to_text.py  stb.py  tts.py
