[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Nobody <<email@address.example>>"]

[tool.poetry.dependencies]
python = "^3.9"
whisper = {git = "https://github.com/openai/whisper.git", rev = "main"}
numpy = "^1.23.5"
torch = "^1.13.0"
tqdm = "^4.64.1"
more-itertools = "^9.0.0"
transformers = ">=4.19.0"
ffmpeg-python = "0.2.0"
fastapi = {extras = ["all"], version = "^0.88.0"}
revChatGPT = "^0.0.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
